# stdlb

./: README.md  pyproject.toml  sample-import-time.ipynb  setup.py  test.ipynb
.github/workflows/: ci.yml  document_exports.yml
scripts/: benchmark_import.py  benchmark_old.py  compare_versions.py  discover_stdlib.py  document_platform_exports.py  generate_init.py  quick_test.py  snapshot_exports.py  test_all_versions.sh
src/stdlb/: __init__.py
std/: __init__.py  cached_property.py
stdlb/: __init__.py
tests/: exports_snapshot.json  optional_symbols.py  test_exports_snapshot.py  test_imports.py
