[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stdlb"
version = "0.1.0"
description = "Wildcard-import the Python standard library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan Williams", email = "ryan@runsascoded.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/runsascoded/stdlb"
Repository = "https://github.com/runsascoded/stdlb"
Issues = "https://github.com/runsascoded/stdlb/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "juq.py>=0.0.1",
    "papermill>=2.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/stdlb",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["stdlb"]
